--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Mouse Mousekewitz
-description: This is Mouse Mousekewitz' homepage.
+title: Karine Heinonen
+description: This is Karine Heinonen' homepage.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-hacker
